# rust-app-example

./: .gitignore  Cargo.toml
app_example/: Cargo.toml
app_example/src/: lib.rs
app_example/src/app/service/: call.rs
app_example/src/context/: mod.rs
app_example/src/domain/: mod.rs
app_example/src/domain/entity/: task.rs  user.rs
app_example/src/domain/repository/: task.rs
app_example/src/domain/vo/: mod.rs  tag.rs  task.rs  user.rs
app_example/src/infra/: mod.rs
app_example/src/infra/mysql/: mod.rs  mysqlcon.rs
app_example/src/infra/redis/: mod.rs  ops.rs  pool.rs  pool_ctxt.rs
app_example/src/infra/repository/: task.rs
macros/: Cargo.toml
macros/src/: lib.rs
