[package]
name = "rust_app_example"
version = "0.1.0"
authors = ["Yuki Toyoda <toyoda_yuki@cyberagent.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros", "app_example"]

[dependencies]
app_example = { path = "./app_example" }
macros = { path = "./macros" }